--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,12 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.18",
     "nodemon": "^2.0.7",
+    "sharp": "^0.27.1",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
